Add @google-cloud/vision dependency

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "version": "1.0.0",
   "dependencies": {
     "express": "^4.19.2",
-    "node-fetch": "^3.3.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "@google-cloud/vision": "^4.0.0"
   }
 }
+
